# diaz_ai

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  README.md  any_test.py  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  jupiter_chat.db  leads.db  main.py  pyproject.toml  requirements.txt  search.html  test_root.py
.github/workflows/: ci_cd.yml  deploy.yml
app/: celery_app.py  config.py  schedule_task.py
app/api/v1/endpoints/: chat_endpoint.py  florida_ai_search.py  florida_chat.py  florida_search.py  jupiter_ai_search.py  jupiter_chat.py  jupiter_filter_search.py  jupiter_leads.py  (+5 more)
app/db/: boats_db.py  chat_db.py  database.py  init_boats.py
app/models/: boat.py  chat_messages.py  florida_boat.py  jupiter_boat.py  leads.py  user.py
app/repositories/: boats_hub.py  boats_repository.py  florida_boat_repository.py  jupiter_boat_repository.py  jupiter_boats_hub.py
app/schemas/: boat_filter.py  schema.py  search.py
app/services/: AI_search_engine.py  chat_storage_service.py  jupiter_AI_search.py  jupiter_filter_search.py  lead_generation_services.py  lead_storage_services.py  search.py
app/services/search_engine/: data_indexing_pipeline.py  index_mapping.py  search.py
app/utils/: helper.py  logger.py  openapi.py  prompt.py  prompts.py  user_guide_setup.py
config/: config.yaml
database/process_csv_data/: process_data.csv
database/process_csv_data_florida/: process_data.csv
database/raw_json_data/: boat_data_0.json  boat_data_1.json  boat_data_all.json
database/raw_json_data_florida/: boat_data_all.json
diaz_server_file/: docker-compose.yml
indexDatabase/: index_vector_data.pkl
qdrant_storage/: raft_state.json
reverse_proxy/: nginx.conf
server_setup/: docker-compose.yml
(+34 files in other folders)
