[project]
name = "diaz-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "ddgs>=9.6.1",
    "fastapi[standard]>=0.120.2",
    "gunicorn>=23.0.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
